--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -338,6 +338,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "GoelSahab",
+      "name": "Harshit Goel",
+      "avatar_url": "https://avatars3.githubusercontent.com/u/72274389?s=460&v=4",
+      "profile": "https://github.com/GoelSahab",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7,
